<resources>
    <string name="app_name">PPR214 Drone App</string>
    <string name="back">Go Back</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_password">Your Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_repeat_password">Confirm Password</string>
    <string name="Enter_your_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="team_oblivion">Powered By Team Oblivion</string>
    <string name="intro_register">Register</string>
    <string name="Intro_login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome</string>
    <string name="my_api_key">AIzaSyBVF0QI3U6rOUtl6JnfgBtDOlmfdzpIIuQ</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="image">image</string>
    <string name="_0">0</string>
    <string name="land">land</string>
    <string name="drone_detection">Drone Detection</string>
    <string name="capture_video">Capture Video</string>
    <string name="connect_to_the_drone">Connect to the drone</string>
    <string name="speed_0_0_mph">Speed : 0.0 mph</string>
    <string name="battery_na">Battery: na</string>
    <string name="height_na">Height: na</string>
    <string name="temp_na">Temp: na</string>
    <string name="accleration_0mph">Accleration: 0mph</string>
    <string name="battery_level">Battery Level: 68%</string>
    <string name="wifi_disconnected">WiFi: disconnected</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="take_off">Take Off</string>
    <string name="up">Up</string>
    <string name="forward">Forward</string>
    <string name="turn_right">Turn right</string>
    <string name="down">Down</string>
    <string name="backward">Backward</string>
    <string name="turn_left">Turn Left</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="capture_image">Capture Image</string>
    <string name="video">Video</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_the_e_mail_you_registered_with_in_the_field_below_nyou_will_recieve_an_e_mail_from_us_to_reset_your_password">Enter the E-mail you registered with in the field below. You will receive an E-mail from us to reset your password.Follow the instructions in the mail carefully to reset your password successfully.</string>
    <string name="send">Send</string>
    <string name="pitch_up">Pitch Up</string>
    <string name="yaw_right">Yaw Right</string>
    <string name="pitch_down">Pitch Down</string>
    <string name="yaw_left">Yaw Left</string>
    <string name="row_left">Row Left</string>
    <string name="row_right">Row Right</string>
    <string name="google_map">Google Map</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="app_ui">App UI</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="enable_gps_for_tagging_and_sharing_your_location">Enable GPS for Tagging and sharing your location</string>
    <string name="allow">Allow</string>
    <string name="this_permissions_need_for_work_app_see_description_for_each_permission">This permissions need for work app, see description for each permission</string>
    <string name="permissions_needed">Permissions Needed</string>
    <string name="turn_on_location_service">Turn On Location Service</string>
    <string name="explore_the_world_without_getting_lost_and_keep_the_track_of_your_location">Explore the world without getting lost and keep the track of your location.</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="enable_bluetooth_for_news_of_events_happening_near_you">Enable bluetooth for News of events happening near you</string>
    <string name="connect">Connect</string>
    <string name="device_list">Device List</string>
    <string name="scan">Scan</string>
    <string name="click_on_the_scan_button_to_initiate_connectivity_to_the_drone_from_the_list_of_devices_select_the_model_hc_05_and_establish_communication">Click on the scan button to initiate connectivity to the drone. From the list of devices, select the model \'HC-05\' and establish communication</string>
    <string name="connect_your_device">Connect your Device</string>
    <string name="for_accurate_location_reading_allow_the_app_access_to_your_location_service">For accurate location reading, allow the app access to your location service</string>
    <string name="Scan">Scan</string>
    <string name="disconnect">Disconnect</string>
    <string name="power">Power</string>
</resources>