<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_page"
        android:contentDescription="@string/app_ui" />

    <ImageView
        android:id="@+id/fab003"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end|start"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:backgroundTint="#000000"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:minWidth="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ui_background"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regNameLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_dorder_background"
            android:drawableStart="@drawable/baseline_people_outline_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#7986CB"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_email"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regEmailField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_dorder_background"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#a2a4b5"
            android:textColorHint="#7986CB"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regPassField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_dorder_background"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#a2a4b5"
            android:textColorHint="#7986CB"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/re_repeat_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regPassRepeatField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_dorder_background"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/Enter_your_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#a2a4b5"
            android:textColorHint="#7986CB"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize,TextContrastCheck"
            tools:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="#4e4e4e"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="#f1f1f1"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>