<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <!--
    <com.alexvas.rtsp.widget.RtspSurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"/>
     -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:checked="false"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/throttledown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_back"
        android:backgroundTint="#ffcc00"
        android:contentDescription="@string/land"
        android:elevation="10dp"
        android:gravity="center"
        app:backgroundTint="#ffcc00"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/throttleup"
        app:layout_constraintVertical_bias="0.647"
        app:srcCompat="@drawable/outline_flight_land_24"
        tools:ignore="ImageContrastCheck" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="332dp"
        android:background="@drawable/round_back"
        android:backgroundTint="#ffcc00"
        android:contentDescription="@string/drone_detection"
        android:elevation="10dp"
        android:gravity="center"
        app:backgroundTint="#ffcc00"
        app:fabCustomSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_map_24"
        tools:ignore="ImageContrastCheck" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickViewLeft"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        app:JV_backgroundColor="#20000000"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#ffcc00"
        app:JV_buttonDirection="horizontal"
        app:JV_buttonSizeRatio="35%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/joystickViewRight"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickViewRight"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="36dp"
        app:JV_backgroundColor="#20000000"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#ffcc00"
        app:JV_buttonDirection="both"
        app:JV_buttonSizeRatio="35%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/droneConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:padding="@dimen/cardview_compat_inset_shadow"
        android:text="@string/connect"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds,TextContrastCheck,VisualLintOverlap" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/throttleup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:background="@drawable/round_back"
        android:backgroundTint="#ffcc00"
        android:contentDescription="@string/take_off"
        android:elevation="10dp"

        android:gravity="center"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:backgroundTint="#ffcc00"
        app:fabCustomSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/outline_flight_takeoff_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pitch_up"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/joystickViewRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="156dp"
        android:rotation="90"
        android:text="@string/yaw_right"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73"
        tools:ignore="VisualLintOverlap,TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pitch_down"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joystickViewRight"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="96dp"
        android:rotation="270"
        android:text="@string/yaw_left"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginStart="444dp"
        android:rotation="-90"
        android:text="@string/row_left"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/joystickViewRight"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:text="@string/row_right"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/joystickViewRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743"
        tools:ignore="VisualLintBounds,VisualLintOverlap" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/videoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:text="@string/video"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toEndOf="@+id/fabMap"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/batterylvl"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/battery_level"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/powerswtch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:text="@string/power"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/videoSwitch"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>