<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_page"
        android:contentDescription="@string/app_ui" />

    <ImageView
        android:id="@+id/fab002"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/forgot_your_password"
        android:textAlignment="center"
        android:textColor="#f1f1f1"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="505dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ui_background"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_dorder_background"
            android:drawableStart="@drawable/baseline_email_24"
            android:ems="10"
            android:hint="Enter your Email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#a2a4b5"
            android:textColorHint="#a2a4b5"
            android:textSize="16sp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/forgotSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:drawablePadding="16dp"
                android:text="@string/send"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/forgotCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:drawablePadding="16dp"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_the_e_mail_you_registered_with_in_the_field_below_nyou_will_recieve_an_e_mail_from_us_to_reset_your_password"
            android:textColor="#4e4e4e"
            android:textSize="20sp"
            android:lineSpacingExtra="3dp"
            android:textStyle="italic"
            tools:ignore="VisualLintLongText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>